# camera-base-architecture

./: CMakeLists.txt  README.md  main.cpp
include/capture/: api_capture_task.h  capture_task.h  rtsp_capture_task.h  zmq_capture_task.h
include/handler/: handler.h
include/pose/: pose_task.h
include/track/: track_task.h
include/utils/: dynamic_properties.hpp  limited_queue.hpp
src/capture/: capture_task.cpp  rtsp_capture_task.cpp
src/pose/: pose_task.cpp
src/track/: track_task.cpp
